@@ -1,3 +1,7 @@
+2008-10-21	Dmitry Dulepov	<dmitry@netcreators.com>
+
+	* Fixed: lokettype URL parameter was ignored when passed in the URL
+
 2008-10-17	Dmitry Dulepov	<dmitry@netcreators.com>
 
 	* Fixed: wrong Dutch strings for locket types
